fix(a11y): increased button font size for better contrast

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,8 +22,8 @@ button {
     border-radius: .5rem;
     font-weight: 500;
     color: var(--vt-c-white);
-    font-size: 1.3rem;
-    padding: .2rem 1rem;
+    font-size: 1.5rem;
+    padding: .25rem 1rem;
     line-height: 2rem;
     cursor: pointer;
     text-align: center;
